deployment/ingress/services/dexes.apex-rs.production.yaml
kind: Service
apiVersion: v1
metadata:
  name: apex-rs-production
  namespace: default
spec:
  type: ExternalName
  externalName: apex-rs.production.svc.cluster.local
  ports:
    - port: 80
