deployment/ingress/services/dexes.cache.production.yaml
kind: Service
apiVersion: v1
metadata:
  name: cache-production
  namespace: default
spec:
  type: ExternalName
  externalName: cache.production.svc.cluster.local
  ports:
    - port: 80
