deployment/ingress/services/dexes.cache.staging.yaml
kind: Service
apiVersion: v1
metadata:
  name: cache-staging
  namespace: default
spec:
  type: ExternalName
  externalName: cache.staging.svc.cluster.local
  ports:
    - port: 80
