deployment/ingress/services/dexes.production.yaml
kind: Service
apiVersion: v1
metadata:
  name: dexes-production
  namespace: default
spec:
  type: ExternalName
  externalName: dexes-frontend.production.svc.cluster.local
  ports:
    - port: 80
